--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -10,7 +10,7 @@
     
     height: 37px;
     width: 130;
-   
     background-color: rgb(3, 29, 51);
-    color: aliceblue;
+    
+    color: whitesmoke;
   }
