--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,7 +4,7 @@
       <img src="assets/download (1).jpg" width="100%">
   </div>
   
-  <div class="column1" id="contents1">
+  <div class="column1" >
   
  
 
@@ -15,6 +15,7 @@
       
           <i>Please signup into your account</i> <br><br>
         </div>
+        
         <div class="column3" style="padding-right: 15%;" >
          <img src="assets/SandhiBaseLogo.jpg" style="width: 60px;">
         </div>
